--- a/__workshop/exercise-1/style.css
+++ b/__workshop/exercise-1/style.css
@@ -1,3 +1,12 @@
 button {
   /* Styles here */
+  background-color: blue;
+  border: none;
+  color: white;
+  padding: 40px 60px;
+  border-radius: 20px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 25px;
 }
